# benchmark-http-servers

./: Justfile  README.md  passenger_wsgi.example.py  passenger_wsgi.py  pyproject.toml
auto-cpanel/: .htaccess  passenger_wsgi.py
benchmarks/: bench_tier1_stdlib_asyncio_default.py  bench_tier1_stdlib_asyncio_uvloop.py  bench_tier1_stdlib_httpserver.py  bench_tier1_stdlib_threadinghttpserver.py  bench_tier2_wsgi_gunicorn_gevent.py  bench_tier2_wsgi_gunicorn_gthread.py  bench_tier2_wsgi_gunicorn_sync.py  bench_tier2_wsgi_waitress.py  bench_tier3_aiohttp_with_aiohttp_parser.py  bench_tier3_blacksheep_with_httptools_parser.py  bench_tier3_falcon_asgi_with_httptools_parser.py  bench_tier3_sanic_with_httptools_parser.py  bench_tier4_asgi_daphne.py  bench_tier4_asgi_hypercorn.py  bench_tier4_asgi_uvicorn_default.py  bench_tier4_asgi_uvicorn_uvloop.py  bench_tier5_asgi_fastapi.py  bench_tier5_asgi_litestar.py  bench_tier5_asgi_quart.py  bench_tier5_asgi_starlette.py  bench_tier6_granian_default.py  bench_tier6_granian_fastapi.py  utils.py
shared/: utils.py
src/: bench_tier1_stdlib_asyncio_uvloop.py  bench_tier2_wsgi_gunicorn_gevent.py  bench_tier2_wsgi_gunicorn_gthread.py  bench_tier2_wsgi_gunicorn_sync.py  bench_tier2_wsgi_waitress.py  bench_tier3_aiohttp_with_aiohttp_parser.py  bench_tier4_asgi_hypercorn.py  bench_tier4_asgi_uvicorn_default.py  bench_tier4_asgi_uvicorn_uvloop.py  bench_tier5_asgi_starlette.py  bench_tier6_granian_default.py  bench_tier6_granian_fastapi.py  main.py
wsgi-bare/: main.py
wsgi-bare-gevent/: .htaccess  main.py  passenger_wsgi.py
wsgi-falcon-gevent/: .htaccess  deploy.sh  main.py  passenger_wsgi.py  requirements.txt
(+8 files in other folders)
