[project]
name = "stonks-api-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=26.1.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "a2wsgi>=1.10.10",
    "fastapi[all]>=0.124.4",
    "uvicorn[standard]>=0.33.0",
    'uvloop>=0.21.0; platform_system != "Windows"',
    "gunicorn>=26.0.0",
    "aiohttp>=3.14.1",
    "blacksheep>=2.6.3",
    "falcon>=4.3.1",
    "sanic[all]>=25.12.1",
    "daphne>=4.2.2",
    "hypercorn>=0.18.0",
    "litestar[pydantic,standard]>=2.24.0",
    "quart>=0.20.0",
    "gevent>=26.5.0",
    "requests>=2.34.2",
    "psutil>=7.2.2",
    "orjson>=3.11.9",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "rich>=14.3.4",
    "ruff>=0.15.11",
    "typer>=0.20.1",
]

[project.optional-dependencies]
opt = [
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # optional (line length handled elsewhere)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

mypy_path = "src"
explicit_package_bases = true
warn_unused_ignores = true
warn_return_any = true

# disallow_untyped_defs = true
# check_untyped_defs = true
# no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["jose.*", "passlib.*"]
ignore_missing_imports = true
